task8/final-env-exam-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: final-env-exam-clusterip
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: final-env-exam
  type: ClusterIP
status:
  loadBalancer: {}
