task8/final-env-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: final-env-clusterip-ingress
  namespace: farrukh-final
spec:
  ingressClassName: nginx
  rules:
  - host: ingress-f-sadatov.sts404.uz
    http:
      paths:
      - backend:
          service:
            name: final-env-exam-clusterip
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
